Exercício 2 (finalmente) feito

--- a/04-exercicio1.ipynb
+++ b/04-exercicio1.ipynb
@@ -84,13 +84,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HsfJvttTmpJf"
+        "id": "HsfJvttTmpJf",
+        "outputId": "55df65cf-8484-4739-ffe3-9c39dc9d6a4b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "#função 5 + 2**2 / 3\n",
+        "\n",
+        "\n",
+        "def soma(num1, num2):\n",
+        "    return num1 + num2\n",
+        "\n",
+        "def fun(num1,num2,num3):\n",
+        "    return (num1 + num2**num2) / (num3)\n",
+        "\n",
+        "fun(5,2,3)\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 73
+        }
+      ]
     },
     {
       "cell_type": "markdown",
