--- a/04-exercicio1.ipynb
+++ b/04-exercicio1.ipynb
@@ -57,7 +57,7 @@
       "source": [
         "print ('Hello World!')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "fun(5,2,3)\n",
         "\n"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,13 +143,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yKXDA4OxmpJ3"
+        "id": "yKXDA4OxmpJ3",
+        "outputId": "7902177c-6239-4f2d-edfa-17f4390af369",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "# A área de um quadrado se dá por: lado**2\n",
+        "\n",
+        "def area_quadrado(num1,num2):\n",
+        "    return num1 ** num2\n",
+        "\n",
+        "area_quadrado(3,2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -163,13 +186,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cJWDsJHUmpKu"
+        "id": "cJWDsJHUmpKu",
+        "outputId": "bb662a06-da85-475f-f268-92ee1ab1314a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "# O volume de um cubo se dá por: v = a3\n",
+        "\n",
+        "def volume(num1):\n",
+        "    return num1*num1*num1\n",
+        "\n",
+        "volume(5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "125"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -183,13 +229,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PdaEw3wDmpLN"
+        "id": "PdaEw3wDmpLN",
+        "outputId": "23170b86-39d8-4637-8709-01a42fbd07a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "# O comprimento de uma circunferência se dá por: C=2*pi*r, onde pi=3,14 e r=raio\n",
+        "\n",
+        "def circ(num1,num2,num3):\n",
+        "    return num1 * num2 * num3\n",
+        "\n",
+        "circ(2,3.14,8)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "50.24"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -203,13 +272,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cPUwWMKYmpLn"
+        "id": "cPUwWMKYmpLn",
+        "outputId": "024a744a-7525-4639-a1c4-eb577cf17428",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "# A área de uma círculo se dá por: A=pi*r2\n",
+        "\n",
+        "def area_circ(num1,num2,num3):\n",
+        "    return num1 * num2**num3\n",
+        "\n",
+        "area_circ(3.14,3,2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "28.26"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,13 +315,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d1cWfWvtmpMH"
+        "id": "d1cWfWvtmpMH",
+        "outputId": "772660dc-ae70-4c2d-ac7e-24eb85bc1c17",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "# O volume de uma esfera se dá por: V=4*pi*r3/3\n",
+        "\n",
+        "def volume_esfera(num1, num2, num3, num4, num5):\n",
+        "    return num1 * num2 * (num3 * num4) / (num5)\n",
+        "\n",
+        "volume_esfera(4,3.14,5,3,3)\n",
+        "\n",
+        "#resultado tá errado"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "62.800000000000004"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -246,7 +363,7 @@
         "id": "s4MgvtrdmpMY"
       },
       "source": [
-        ""
+        "# Os juros simples se dão por: "
       ],
       "execution_count": null,
       "outputs": []
